# usb_tracing_events_app

./: CMakeLists.txt  LICENSE  README.md
efsw-master/: CMakeLists.txt  LICENSE  README.md  efswConfig.cmake.in
efsw-master/project/: build.reldbginfo.sh
efsw-master/project/qtcreator-linux/: efsw.files  efsw.includes
efsw-master/project/qtcreator-osx/: efsw.config  efsw.files  efsw.includes
efsw-master/src/efsw/: AtomicBool.hpp  DirWatcherGeneric.cpp  FileInfo.cpp  FileInfo.hpp  FileSystem.cpp  FileSystem.hpp  FileWatcherCWrapper.cpp  FileWatcherFSEvents.cpp  FileWatcherFSEvents.hpp  FileWatcherGeneric.cpp  FileWatcherInotify.cpp  FileWatcherInotify.hpp  FileWatcherKqueue.cpp  WatcherFSEvents.cpp  WatcherWin32.cpp  WatcherWin32.hpp  inotify-nosys.h
efsw-master/src/efsw/platform/posix/: FileSystemImpl.cpp  FileSystemImpl.hpp
efsw-master/src/efsw/platform/win/: FileSystemImpl.cpp  FileSystemImpl.hpp
my_usb_tracer/: monitor.cpp  monitor.h  test.cpp  usb_monitor.cpp  usb_monitor.h
